# FedRL

./: .gitignore  DEMO_README.md  EVALUATOR_GUIDE.md  PLAY_CHESS_GUIDE.md  README.md  RESULTS.md  analyze_metrics.py  client_demo.py  docker-compose.yml  main.py  pyproject.toml  server_demo.py  test_evaluator.sh
chess-federated-learning/: DEPLOYMENT.md  debug_memory.py  evaluator.py  play_chess.py  results.json
docs/: DATABASE_SIZING_GUIDE.md  DEPLOYMENT.md  MEMORY_DEBUGGING_GUIDE.md  MODEL_ANALYSIS_METRICS.md  PERFORMANCE_GUIDE.md  REDIS_GAME_CACHE_DESIGN.md  REDIS_MIGRATION_PLAN.md  RESUME_TRAINING.md  SUPERVISED_LEARNING_GUIDE.md
plots/: README.md  behavioral_separation_all.csv  center_control_B1_full_sharing.csv  center_control_B2_no_sharing.csv  center_control_P1_share_early.csv  center_control_P2_share_middle.csv  center_control_P3_share_late.csv  center_control_P4_share_backbone.csv  cluster_avg_center_control_all.csv  cluster_avg_elo_all.csv  cluster_avg_legal_moves_all.csv  cluster_avg_material_metrics_all.csv  cluster_avg_move_diversity_all.csv  cluster_avg_win_rate_all.csv  divergence_by_layer_group_all.csv  divergence_heatmap_B1_full_sharing.csv  divergence_heatmap_B2_no_sharing.csv  divergence_heatmap_P1_share_early.csv  divergence_heatmap_P2_share_middle.csv  divergence_heatmap_P3_share_late.csv  divergence_heatmap_P4_share_backbone.csv  divergence_per_round_all.csv  elo_comparison_all.csv  elo_progression_B1_full_sharing.csv  elo_progression_B2_no_sharing.csv  elo_progression_P1_share_early.csv  elo_progression_P2_share_middle.csv  elo_progression_P3_share_late.csv  elo_progression_P4_share_backbone.csv  elo_vs_divergence.csv  final_divergence_comparison.csv  l2_norm_by_layer_B1_full_sharing.csv  l2_norm_by_layer_B2_no_sharing.csv  l2_norm_by_layer_P1_share_early.csv  l2_norm_by_layer_P2_share_middle.csv  l2_norm_by_layer_P3_share_late.csv  l2_norm_by_layer_P4_share_backbone.csv  legal_moves_by_phase_B1_full_sharing.csv  legal_moves_by_phase_B2_no_sharing.csv  legal_moves_by_phase_P1_share_early.csv  (+55 more)
scripts/: download_additional_databases.sh  index_games_to_redis.py  (+11 more)
(+199 files in other folders)
